        PR middle-end/39927         PR bootstrap/39929         * tree-outof-ssa.c (emit_partition_copy): New function.         (insert_partition_copy_on_edge, insert_rtx_to_part_on_edge,         insert_part_to_rtx_on_edge): Perform the partition base var         copy using emit_partition_copy.         (insert_value_copy_on_edge): Convert constants to the right mode.         (insert_rtx_to_part_on_edge): Add UNSIGNEDSRCP parameter.         (elim_create): Pass the sign of the src to insert_rtx_to_part_on_edge.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@146982 138bc75d-0d04-0410-961f-82ee72b054a4